# roverchallenge-ru

./: .editorconfig  .env.example  .gitattributes  .gitignore  .gitmodules  README.md  justfile  setup.sh
_utils/: base.py  base.sh  recorder.sh
src/: .clang-tidy
src/controller/: package.xml  setup.py
src/controller/controller/: __main__.py  node.py
src/controller/launch/: controller.launch.py
src/gazebo_systems/: CMakeLists.txt  package.xml
src/gazebo_systems/include/gazebo_systems/: BasicSystem.h  DoorButtonSystem.h
src/gazebo_systems/src/: BasicSystem.cpp  DoorButtonSystem.cpp  common.hpp
src/gazebo_systems/src/door_button/: DoorButtonSystem.cpp  DoorButtonSystem.h
src/gazebo_systems/src/triggers/: BaseJointTriggerSystem.cpp  BaseJointTriggerSystem.h
src/gazebo_systems/src/triggers/DoorButton/: DoorButton.cpp  DoorButton.h
src/radiolink/: package.xml  setup.cfg  setup.py
src/radiolink/launch/: radiolink.py
src/radiolink/radiolink/: __main__.py  node.py
src/simulation/: .gitignore  README.md  package.xml  setup.py
src/simulation/config/: gazebo.rviz  gz.config  ros_bridge.yaml  rqt.perspective
src/simulation/launch/: full_rviz.launch.py  rsp_model.launch.py  sim.launch.py  simple_rviz.launch.py
src/simulation/models/: .gitignore  build_model.py
src/simulation/models/common/: ground_plane.xacro  gui.xacro  plugins.xacro  simple_light.xacro  utils.xacro
src/simulation/models/explorer/: explorer.srdf  explorer.urdf.xacro  j5-d405-mount.stl
src/simulation/models/objects/01-module/: 01-module.stl  01-module.txt  model.config  model.sdf.xacro  module.xacro
src/simulation/models/objects/06-lamp/: 06-lamp-base.stl  06-lamp.txt  lamp-top.stl
src/simulation/models/objects/button/: 04-em-base.stl  04-em-button.stl  04-em-button.txt  button.xacro  model.sdf.xacro
src/simulation/models/objects/cameras/: Camera-FOV120.stl  d405.xacro  d435.xacro  fov120.xacro  realsence-D405.stl  realsence-D435.stl
src/simulation/models/objects/field/: field-2024.stl  field-demo1.stl  model.config  model.sdf.xacro  zabor.stl
src/simulation/models/objects/garage/: base-door.stl  base1-asm.stl  model.config  model.sdf.xacro
src/simulation/models/objects/garage-inter/: base-descr.txt  model.config  model.sdf.xacro
src/simulation/models/objects/main-panel/: main-panel.stl  main-panel.xacro  model.config  model.sdf.xacro  panel-descr.txt  sampler-door.stl
src/simulation/models/objects/marker/: marker.xacro  marker10.stl  model.config  model.sdf.xacro
src/simulation/models/objects/sample_can/: model.config  model.sdf.xacro  sample-can.stl
src/simulation/models/objects/simple_door/: model.sdf.xacro
src/simulation/models/objects/switch/: 01-base.txt  01_base.stl  01_tumbler.stl  model.config  model.sdf.xacro  switch.xacro
src/simulation/models/objects/switch_room/: 03-roomswitch.txt  03-rs-base.stl  03-rs-tumbler.stl  model.config  model.sdf.xacro  switch_room.xacro
src/simulation/models/objects/switch_rotate/: 02-rotate-switch.stl  02-rotsw-base.stl  02-rotsw-base.txt  model.config  model.sdf.xacro  rotator.xacro
src/simulation/models/objects/test/rotator_with_base/: model.config  model.sdf.xacro
src/simulation/models/objects/test/simple_door/: model.config  model.sdf.xacro
src/simulation/models/objects/test/switch_with_base/: model.config  model.sdf.xacro
src/simulation/models/objects/test/tex_plane/: model.config  model.sdf.xacro
src/simulation/models/objects/weight-button/: 05-wb-base.stl  05-wb-switch.stl  05-wb-switch.txt  model.config  model.sdf.xacro  weight_button.xacro
src/simulation/models/rover/: README.md  rover.urdf.xacro  rover.xacro  sslidar.xacro  wheel.xacro
src/simulation/models/rover/docs/: Explorer-1.txt
src/simulation/models/rover/stl/: bumper.stl  cam120-stoika.stl  d435-mount.stl  explorer-base.stl  moun-plate.stl  realsens.stl  top-face.stl  top-rails.stl  tyre.stl  wdisc.stl
src/simulation/models/worlds/: plane.sdf.xacro
src/simulation/models/worlds/field/: field.sdf.xacro
src/simulation/simulation/: common.py
